--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -17,8 +17,11 @@
     <span id='contact-btn' class='btn btn-default'>Select from Contacts</span>
   </div>
 
-  <div class="form-group" id="contacts-dropdown">
-    <%= f.collection_select(:to, current_user.contacts.all, :phone, :name) %>
+  <div class="form-group" id="contacts-checkbox">
+    <% current_user.contacts.each do |contact| %>
+      <%= check_box_tag("#{contact.name}", contact.phone) %>
+      <%= label_tag("#{contact.name}") %>
+    <% end %>
   </div>
   <div class="form-group">
     <%= f.label :body, "Message" %></br>
