--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -19,7 +19,7 @@
 
   <div class="form-group" id="contacts-checkbox">
     <% current_user.contacts.each do |contact| %>
-      <%= check_box_tag("#{contact.name}", contact.phone) %>
+      <%= check_box_tag("multi[#{contact.name}]", contact.phone) %>
       <%= label_tag("#{contact.name}") %>
     <% end %>
   </div>
